# appplex

./: .gitignore  CMakeLists.txt  README.md  appplex-conf.kxmd  appplex-conf.sbmd  compile-cmake-linux.cmd  compile-cmake-save-log.cmd  compile-cmake.cmd
cmd/: appplex-conf.cmd
pfm/android/: build.gradle  gradle.properties  local.properties
pfm/android/app/: build.gradle
pfm/android/default/: build.gradle  gradle.properties
pfm/android/default/app/: build.gradle
pfm/emscripten/: appplex-src.html  start-localhost.cmd
pfm/emscripten/src/: CMakeLists.txt  main.cxx  main.hxx
pfm/ios/: generate-ios-project.sh
pfm/ios/res/: VideoEncApp-Info.plist  plist.in
pfm/ios/res/storyboards/: Main.storyboard
pfm/ios/src/: CMakeLists.txt  ViewController.h  ViewController.mm  global-c-functions.h  ios-bridge.hpp  main.cpp  main.hpp  main.hxx  main.mm  objc-cxx-bridge.hpp
pfm/ios/src/ios/: CMakeLists.txt
pfm/msvc/msvc-2013/: appplex.sln  appplex.vcxproj  appplex.vcxproj.filters  libpng17.dll-2
pfm/msvc/msvc-2013/lib/: freeimage.lib  libogg_static.lib  libpng17.lib  libpng17.lib-2  zlib.lib
pfm/msvc/msvc-2015/: appplex.vcxproj  appplex.vcxproj.filters
pfm/msvc/msvc-2015/lib/: libvorbis_static.lib  libvorbisfile_static.lib
pfm/msvc/src/: CMakeLists.txt  main.cpp  main.cxx  main.hpp  main.hxx
res/00-unsorted/shaders/: conv_yuv420sp_2_rgb.fsh  conv_yuv420sp_2_rgb.vsh  l_c_o.fsh  l_c_o.vsh
res/common/shaders/freetype-gl/: v3f-t2f-c4f.frag
res/kemx/: kemx-access.sbmd
res/shader-fx/fx-shaders/glslsandbox/: fx_black_hole_stars.fsh  fx_boxes.fsh  fx_cable_and_hollow_cylinders_2.fsh  fx_checkerboard_pattern.fsh  fx_diffraction_spikes.fsh  fx_energy_sphere.fsh  fx_font_test.fsh  fx_fractal_tree.fsh  fx_gas_giant.fsh  fx_gradient_bg.fsh  fx_lens_flare.fsh  fx_light_waves.fsh  fx_light_waves_2.fsh  fx_lightballs.fsh  fx_lights_4.fsh  fx_lines.fsh  fx_lines_2.fsh  fx_lissajous.fsh  fx_motion_lines.fsh  fx_planetary_nebula.fsh  fx_platformer.fsh  fx_platformer_2.fsh  fx_rainbow_galaxy.fsh  fx_rainbow_rodeo.fsh  fx_rays.fsh  fx_rays_2.fsh  fx_ripples_2.fsh  fx_signed_distance.fsh  fx_sine_colors.fsh  fx_sine_pattern.fsh  fx_star_flare.fsh  fx_starfield.fsh  fx_starfield_2.fsh  fx_sun_glare_2.fsh  fx_tunnel.fsh  fx_wipeout.fsh
res/shader-fx/fx-shaders/shadertoy/: 0003.fsh  1000 Spheres remake from 1995.fsh  14 segment display.fsh  1D, 2D & 3D Value Noise.fsh  2D Voxels.fsh  2d distort.fsh  2dnoisetexture.fsh  3D Spheres !.fsh  3D Text Renderer.fsh  7 Segment Display.fsh  80's Typography.fsh  A lot of spheres.fsh  A tree.fsh  AOBench.fsh  Abandoned base on Mars.fsh  Akiyoshi's Snakes Illusion.fsh  Alps.fsh  Analytic Gradients.fsh  Anatomy of an explosion.fsh  Anisotropic Lighting.fsh  Antialiasing.fsh  Apollonian.fsh  Apple.fsh  Asteroid Rover.fsh  Atomium.fsh  Ball Of Fire.fsh  Balls, balls, balls!.fsh  Barbarella.fsh  Barrel Blur Chroma.fsh  Basic Edge Detection.fsh  Bats in Bellfry.fsh  Benham's Disk.fsh  Bezier distance.fsh  Bezier.fsh  Bilinear Interpolation.fsh  Binary Clock.fsh  Binary Serpents.fsh  Black Hole Raytracer.fsh  Blank Framework.fsh  Bleepy blocks.fsh  (+555 more)
res/test-normal-mapping/car/: car.mtl  newcar.mtl  viper_body.mtl  w1_dup.mtl
res/test-normal-mapping/shaders/car-shaders/: car.fs  metallic-paint - Copy.fsh  metallic-paint2.fsh  sp_car_glass - Copy (2).fsh  sp_car_tyre.vsh  sp_car_wheel_rim - Copy.vsh
res/test-shadow-map/shaders/: dbg_l_d_o.vsh  l_d_o.vsh  sp_l_d_o_globe3d.fsh
res/test-shadow-map/winter-track/: dt-winter-track.csv
src/: CMakeLists.txt
src-inc/VG/: openvg.h  vgext.h
src-inc/boost/: process.hpp
src-inc/boost/chrono/: config.hpp
src-inc/boost/filesystem/: config.hpp
src-inc/boost/process/: context.hpp  process.hpp  self.hpp  win32_child.hpp  win32_context.hpp
src-inc/boost/program_options/: config.hpp
src-inc/boost/system/: config.hpp
src-inc/boost/timer/: config.hpp
src-inc/ffmpeg/libavutil/: pixfmt.h
src-inc/notifications/: local-notification.hpp
src-inc/stk/: Stk.h
src-lib/boost/chrono/: chrono.cpp
src-lib/boost/filesystem/: operations.cpp  portability.cpp  windows_file_codecvt.cpp
src-lib/boost/program_options/: cmdline.cpp  options_description.cpp  parsers.cpp  positional_options.cpp  split.cpp  utf8_codecvt_facet_program_options.cpp  value_semantic.cpp  winmain.cpp
src-lib/boost/system/: error_code.cpp
src-lib/boost/timer/: auto_timers_construction.cpp
src-lib/freetype-gl/: edtaa3func.c  font-manager.c  mat4.c  platform.c  shader.c  text-buffer.c  texture-atlas.c  texture-font.c  vector.c  vertex-attribute.c  vertex-buffer.c
src-lib/notifications/android/: local-notification-android.cpp
src-lib/notifications/win32/: local-notification-win32.cpp
src-lib/snd/android/: opensl-stream.cpp  snd-android.cpp
src-lib/snd/win32/: snd-win32.cpp
src/app/: CMakeLists.txt
src/app/min/: CMakeLists.txt  appplex-conf.cxx  appplex-conf.hxx  cpp-property.hpp  data-sequence.cpp  data-sequence.hpp  min.cpp  min.cxx  min.hpp  min.hxx  pfm-def.h  pfm-gl.h  pfm.cpp  pfm.cxx  pfm.hpp  pfm.hxx  pfmgl.h  stdafx.h
src/app/mod/: CMakeLists.txt
src/krn/: CMakeLists.txt  appplex-conf.cxx  appplex-conf.hxx  data-seqv.hxx  krn.cxx  krn.hxx  mws-impl.hxx  mws-mod-ctrl.cxx  mws-mod-ctrl.hxx  mws-mod.cxx  mws-mod.hxx  new-appplex-conf.cxx  pfm-def.h  pfm.cxx  pfm.hxx
src/krn/android/: ifaddrs.h  jni-helper.hxx  main.cxx
src/krn/linux/: main.cxx
src/krn/windows/: main.cxx
src/min/: CMakeLists.txt  appplex-conf.cpp  appplex-conf.hpp  cpp-property.hxx  data-sequence.cxx  data-sequence.hxx  data-seqv.hxx  min.cxx  min.hxx  mod-list.hxx  mws-impl.hxx  mws-mod-ctrl.cxx  mws-mod-ctrl.hxx  mws-mod.cxx  mws-mod.hxx  pfm-def.h  pfm-gl.h  pfm.cpp  pfm.cxx  pfm.hpp  pfm.hxx  stdafx.h
src/min/android/: jni-helper.cxx  main.cxx
src/min/emscripten/: main.cxx
src/min/linux/: CMakeLists.txt  main.cxx
src/min/unit/: unit-ctrl.cpp  unit-ctrl.hpp  unit.cpp  unit.hpp
src/min/windows/: main.cxx
src/mod/: CMakeLists.txt  mod-stubs.cxx
src/mod/pub/: CMakeLists.txt
src/res/shaders/: conv-rgb-2-uv-420.fsh
(+2008 files in other folders)
